[tool.poetry]
name = "cita-previa-extranjeria-monitor"
version = "0.1.0"
description = ""
authors = ["kpliuta <9212935+kpliuta@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.1"
pyyaml = "^6.0.2"
selenium = "^4.33.0"
webdriver-manager = "^4.0.2"
requests = "^2.32.3"

termux-web-scraper = { git = "https://github.com/kpliuta/termux-web-scraper.git", rev = "0.1.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
